--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,9 +3,6 @@
     padding:0;
     box-sizing:border-box;
 }
-.highlight {
-    color: #e74c3c;
-}
 body{
     display:grid;
     left:0;
@@ -35,12 +32,18 @@ ul{
    
     display:grid;
     grid-template-rows:60px;
-    grid-template-columns: auto  100px 100px 100px;
+    grid-template-columns: auto  100px 100px 120px 120px 100px;
     /*border:1px solid red;*/
     width:100%;
     height:100%;
     align-items:center;
  
+}
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 650px;
 }
 li{
     
@@ -185,13 +188,14 @@ form{
 input{
     padding:10px;
     margin:10px;
+    font-size: 16px;
     width:100%;
     height:50px;
     border:none;
     border-bottom:1px solid grey;
 }
-input[type="button"]{
-    width:15%;
+input[type="submit"]{
+    width:40%;
    
     letter-spacing:2px;
 }
